--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "markdown-it": "^12.0.2",
     "mathjs": "^8.0.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "noty": "^3.2.0-beta",
     "parse-domain": "^3.0.3",
     "prop-types": "^15.7.2",
@@ -74,6 +73,7 @@
     "cross-env": "^7.0.2",
     "electron": "^10.1.5",
     "electron-builder": "^22.9.1",
+    "sass": "^1.53.0",
     "typescript": "^4.0.5",
     "wait-on": "^5.2.0"
   },
